Add API and UI to immediately poll platform in use
Solves: #440
